--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ h1 {
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 3rem;
+    margin: 2rem 0 0;
 }
 
 .button {
